# Nostalgia

./: .gitignore  CMakeLists.txt  README.md  chunk.cpp  chunk.hpp  client.cpp  client.hpp  consts.hpp  info.hpp  main.cpp  packet_reader.cpp  packet_reader.hpp  packet_writer.cpp  packet_writer.hpp  packets.cpp  packets.hpp  server.cpp  server.hpp  world.cpp  world.hpp
etc/: Blocks.csv
etc/scripts/: init.lua
etc/scripts/commands/: test.lua  weird.lua
include/network/: packet_reader.hpp  packet_writer.hpp  packets.hpp
include/player/: client.hpp
include/scripting/: common.hpp  events.hpp  player.hpp  scripting.hpp  world.hpp
include/system/: atoms.hpp  console.hpp  consts.hpp  info.hpp  registries.hpp  scripting.hpp  server.hpp
include/util/: nbt.hpp  pack_array.hpp  position.hpp  uuid.hpp
include/window/: slot.hpp  window.hpp
include/world/: blocks.hpp  chunk.hpp  generator.hpp  generator_actor.hpp  provider.hpp  world.hpp
include/world/generators/: flatgrass.hpp
include/world/providers/nw1/: compress.hpp  nw1.hpp
src/: main.cpp
src/network/: packet_reader.cpp  packet_writer.cpp  packets.cpp
src/player/: client.cpp
src/scripting/: common.cpp  events.cpp  player.cpp  scripting.cpp  world.cpp
src/system/: console.cpp  registries.cpp  scripting.cpp  server.cpp
src/util/: nbt.cpp  position.cpp
src/window/: window.cpp
src/world/: blocks.cpp  chunk.cpp  generator.cpp  generator_actor.cpp  provider.cpp  world.cpp
src/world/generators/: flatgrass.cpp
src/world/providers/nw1/: nw1.cpp
